2000-04-27  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* cxux-nat.c (add_shared_symbol_files): Don't treat .text section
 	as special in the section_addr_info structure.
	* pa64solib.c (pa64_solib_add_solib_objfile): Ditto.
	* osfsolib.c (symbol_add_stub): Ditto.
	* irix5-nat.c (symbol_add_stub): Ditto.

Thu Apr 27 14:07:16 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c, d10v-tdep.c: Include "arch-utils.h".

Thu Apr 27 10:06:42 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Document IRIX X ARM cross compile problems.

2000-04-26  Michael Snyder  <msnyder@seadog.cygnus.com>

	* utils.c (internal_verror): Call target_terminal_ours.
	* wrapper.h: fix minor comment typo.
	* proc-api.c (write_with_trace): Change 'arg' from long to int.
	Treat 'off_t' and 'size_t' as unsigned long in printfs.
	(lseek_with_trace): Treat 'off_t' as unsigned long in printf.
	* procfs.c (comments): Eliminate "???" in comments, which GCC
	wants to interpret as a trigraph.  (fill_gregset, supply_gregset,
	fill_fpregset, supply_fpregset): declare.
	(procfs_wait): Sysargs is a long, change printf format to match.
	(test-mapping, mapping_test, test_mapping_cmd) Remove (test only).

2000-04-26  Kevin Buettner  <kevinb@redhat.com>

	* config/djgpp/fnchange.lst (ia64-linux-nat.c): Map to
	ia64linux-nat.c.

Wed Apr 26 13:50:35 2000  Philippe De Muyter  <phdm@macqel.be>

	* ax-gdb.c (agent_command): Remove now useless cast of
	`free_current_contents' when passed to `make_cleanup'.
	* coffread.c (coff_symfile_read): Ditto.
	* dwarf2read.c (dwarf2_add_member_fn, read_array_type): Ditto.
	(dwarf_decode_lines): Ditto.
	* eval.c (parse_and_eval_address, parse_and_eval_address_1): Ditto.
	(parse_and_eval, parse_to_comma_and_eval): Ditto.
	* parse.c (parse_exp_1): Ditto.
	* printcmd.c (print_command_1, output_command, set_command): Ditto.
	(x_command, print_frame_args, printf_command): Ditto.
	* top.c (execute_control_command): Ditto.
	* tracepoint.c (validate_actionline): Ditto.